// Diagrams:
//   fk0du0B74VmS [active] "main" (9 tables)

// Groups in "main" (fk0du0B74VmS):
//   xwx_uzg4-AkjSlejaUHcr "Autenticacion" (6 tables)

// === ERFlow Layout ===
//
// Diagram "main" (fk0du0B74VmS) [active]
//
//   Group "Autenticacion" (xwx_uzg4-AkjSlejaUHcr)  color=#a855f7  pos=(-1037,-709)  size=(2180,1598)
//     m_opciones                pos=(665,-58)  size=(320,282)
//     m_roles_opciones          pos=(-219,-231)  size=(384,399)
//     m_roles                   pos=(-989,-393)  size=(430,291)
//     m_menus                   pos=(412,-481)  size=(594,345)
//     m_roles_menus             pos=(-227,-625)  size=(436,314)
//     m_estados                 pos=(248,360)  size=(392,358)
//
//   Ungrouped tables:
//     t_usuarios                pos=(-397,383)  size=(387,392)
//     t_usuario_rol             pos=(-935,78)  size=(404,339)
//     m_tipo_estado             pos=(1049,441)  size=(340,310)
// === End Layout ===

// Generated by ER Flow MCP Server

Table m_estados {
  id_estado tinyint [pk, not null]
  id_tipo_estado int [not null]
  cod_estado varchar(12) [unique, not null]
  desc_estado varchar(20) [not null]
  desc_usuario_crea varchar(50) [not null, default: 'CURRENT_USER()']
  desc_usuario_modf varchar(50) [not null, default: 'CURRENT_USER()']
  fec_creacion datetime [not null, default: 'CURRENT_TIMESTAMP']
  fec_modf datetime [not null, default: 'CURRENT_TIMESTAMP']
  flg_activo bigint [not null, default: 1]
}

Table m_menus {
  id_menu int [pk, increment, not null]
  cod_menu varchar(12) [unique, not null]
  cod_sub_menu varchar(12)
  id_menu_padre int
  desc_menu varchar(150) [not null]
  desc_ruta varchar(200) [not null]
  desc_usuario_crea varchar(50) [not null, default: 'CURRENT_USER()']
  desc_usuario_modf varchar(50) [not null, default: 'CURRENT_USER()']
  fec_creacion datetime [not null, default: 'CURRENT_TIMESTAMP']
  fec_modf datetime [not null, default: 'CURRENT_TIMESTAMP']
  id_estado tinyint [not null, default: 1]
}

Table m_opciones {
  id_menu int [pk, not null]
  id_opcion int [pk, increment, not null]
  cod_menu varchar(12) [unique, not null]
  desc_usuario_crea varchar(50) [not null, default: 'CURRENT_USER()']
  desc_usuario_modf varchar(50) [not null, default: 'CURRENT_USER()']
  fec_creacion datetime [not null, default: 'CURRENT_TIMESTAMP']
  fec_modf datetime [not null, default: 'CURRENT_TIMESTAMP']
  desc_opcion varchar(150) [not null]
  desc_ruta varchar(200) [not null]
  id_estado tinyint [not null, default: 1]
}

Table m_roles {
  id_rol int [pk, increment, not null]
  cod_rol varchar(12) [unique, not null]
  desc_rol varchar(150) [not null]
  desc_usuario_crea varchar(50) [not null, default: 'CURRENT_USER()']
  desc_usuario_modf varchar(50) [not null, default: 'CURRENT_USER()']
  fec_creacion datetime [not null, default: 'CURRENT_TIMESTAMP']
  fec_modf datetime [not null, default: 'CURRENT_TIMESTAMP']
  id_estado tinyint [not null, default: 1]
}

Table m_roles_menus {
  id_rol_menu int [pk, increment, unique, not null]
  id_rol int [not null]
  id_menu int [not null]
  desc_usuario_crea varchar(255) [not null]
  desc_usuario_modf varchar(255) [not null]
  fec_creacion datetime [not null, default: 'CURRENT_TIMESTAMP']
  fec_modf int [not null]
  id_estado tinyint [not null]
}

Table m_roles_opciones {
  id_rol_opcion int [pk, increment, not null]
  id_rol int [not null]
  id_opcion int [not null]
  id_menu int [not null]
  desc_usuario_crea varchar(50) [not null, default: 'CURRENT_USER()']
  desc_usuario_modf varchar(50) [not null, default: 'CURRENT_USER()']
  fec_creacion datetime [not null, default: 'CURRENT_TIMESTAMP']
  fec_modf datetime [not null, default: 'CURRENT_TIMESTAMP']
}

Table m_tipo_estado {
  id_tipo_estado int [pk, increment, unique, not null]
  cod_tipo_estado varchar(12) [not null]
  desc_tipo_estado varchar(255) [not null]
  flc_activo bigint [not null]
}

Table t_usuarios {
  id_usuario int [pk, increment, unique, not null]
  desc_apellidos varchar(255) [not null]
  desc_email varchar(150)
  desc_nombres varchar(255) [not null]
  desc_usuario varchar(150) [not null]
  desc_usuario_crea varchar(50) [not null, default: 'CURRENT_USER()']
  desc_usuario_modf varchar(50) [not null, default: 'CURRENT_USER()']
  fec_creacion datetime [not null, default: 'CURRENT_TIMESTAMP']
  fec_modf datetime [not null, default: 'CURRENT_TIMESTAMP']
  id_estado tinyint [not null, default: 1]
}

Table t_usuario_rol {
  id_usuario_rol int [pk, increment, unique, not null]
  id_rol int [not null]
  id_usuario int [not null]
  desc_usuario_crea varchar(50) [not null, default: 'CURRENT_USER()']
  desc_usuario_modf varchar(50) [not null, default: 'CURRENT_USER()']
  fec_creacion datetime [not null, default: 'CURRENT_TIMESTAMP']
  fec_modf datetime [not null, default: 'CURRENT_TIMESTAMP']
  id_estado tinyint [not null, default: 1]
}

// Relationships
Ref: m_estados.id_tipo_estado > m_tipo_estado.id_tipo_estado
Ref: m_menus.id_estado > m_estados.id_estado
Ref: m_opciones.id_menu > m_menus.id_menu
Ref: m_opciones.id_estado > m_estados.id_estado
Ref: m_roles.id_estado > m_estados.id_estado
Ref: m_roles_menus.id_menu > m_menus.id_menu
Ref: m_roles_menus.id_rol > m_roles.id_rol
Ref: m_roles_menus.id_estado > m_estados.id_estado
Ref: m_roles_opciones.id_rol > m_roles.id_rol
Ref: m_roles_opciones.id_menu, id_opcion > m_opciones.id_menu, id_opcion
Ref: t_usuarios.id_estado > m_estados.id_estado
Ref: t_usuario_rol.id_rol > m_roles.id_rol
Ref: t_usuario_rol.id_estado > m_estados.id_estado
Ref: t_usuario_rol.id_usuario > t_usuarios.id_usuario
